New domain: srating.io

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "sports ranking",
-  "name": "sports ranking io",
+  "short_name": "srating",
+  "name": "srating io",
   "icons": [
     {
       "src": "favicon.ico",
