--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sportsranking-app",
-  "version": "0.2.0",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -14,16 +14,19 @@
     "highcharts": "^10.3.1",
     "highcharts-react-official": "^3.1.0",
     "moment": "^2.29.4",
-    "next": "^13.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
+    "react-scripts": "5.0.1",
+    "react-select": "^5.6.1",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
