--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srating.io-gui",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "highcharts": "^10.3.1",
     "highcharts-react-official": "^3.1.0",
+    "memory-cache": "^0.2.0",
     "moment": "^2.29.4",
     "next": "^13.1.5",
     "react": "^18.2.0",
