--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srating.io-gui",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -18,6 +18,7 @@
     "next": "^13.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-virtuoso": "^4.3.5",
     "typeface-roboto": "^1.1.13",
     "web-vitals": "^2.1.4"
   },
