--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srating.io-gui",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "highcharts": "^10.3.1",
     "highcharts-react-official": "^3.1.0",
+    "lodash": "^4.17.21",
     "memory-cache": "^0.2.0",
     "moment": "^2.29.4",
     "next": "^13.1.5",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-virtuoso": "^4.3.5",
     "typeface-roboto": "^1.1.13",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
