--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srating.io-gui",
-  "version": "0.5.1",
+  "version": "0.6.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -11,9 +11,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gray-matter": "^4.0.3",
     "highcharts": "^10.3.1",
     "highcharts-react-official": "^3.1.0",
+    "html-loader": "^4.2.0",
     "lodash": "^4.17.21",
+    "markdown-loader": "^8.0.0",
+    "markdown-to-jsx": "^7.2.1",
     "memory-cache": "^0.2.0",
     "moment": "^2.29.4",
     "next": "^13.1.5",
