--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srating.io-gui",
-  "version": "1.1.2",
+  "version": "2.0.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
     "@mui/x-date-pickers": "^5.0.9",
+    "@reduxjs/toolkit": "^1.9.7",
     "@stripe/react-stripe-js": "^2.1.2",
     "@stripe/stripe-js": "^2.0.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -25,8 +26,10 @@
     "next": "^13.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.3",
     "react-virtuoso": "^4.3.5",
     "typeface-roboto": "^1.1.13",
+    "typescript": "^5.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
