Bug fixes: scroll issues with app router, upgrade versions of packages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,13 @@
       "dom.iterable",
       "esnext"
     ],
+    "baseUrl": ".",
+    "paths": {
+      "@/components/*": ["components/*"],
+      "@/redux/*": ["redux/*"],
+      "@/lib/*": ["lib/*"],
+      "@/contexts/*": ["contexts/*"]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "strict": false,
