Bug fix: games / picks navbar date issues

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "@/components/*": ["components/*"],
       "@/redux/*": ["redux/*"],
       "@/lib/*": ["lib/*"],
-      "@/contexts/*": ["contexts/*"]
+      "@/contexts/*": ["contexts/*"],
+      "@/app/*": ["app/*"],
     },
     "allowJs": true,
     "skipLibCheck": true,
