chore: reorganize types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "@/lib/*": ["lib/*"],
       "@/contexts/*": ["contexts/*"],
       "@/app/*": ["app/*"],
+      "@/types/*": ["types/*"],
     },
     "allowJs": true,
     "skipLibCheck": true,
