--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srating.io-gui",
-  "version": "2.3.1",
+  "version": "2.3.2",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.15.1",
     "@mui/material": "^5.15.1",
     "@mui/x-date-pickers": "^5.0.15",
+    "@next/bundle-analyzer": "^14.2.3",
     "@reduxjs/toolkit": "^2.0.1",
     "@stripe/react-stripe-js": "^2.4.0",
     "@stripe/stripe-js": "^2.2.2",
@@ -31,6 +32,8 @@
     "typeface-roboto": "^1.1.13",
     "typescript": "^5.3.3",
     "web-vitals": "^3.5.0"
+  },
+  "devDependencies": {
   },
   "scripts": {
     "dev": "next dev -p 3000",
