--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: esmalleydev
-custom: https://www.buymeacoffee.com/lxeUvrCaH1
+# custom: https://www.buymeacoffee.com/lxeUvrCaH1
