--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start"
   },
   "eslintConfig": {
     "extends": [
