--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3000"
+    "start": "next start -p 3000",
+    "pm2": "pm2"
   },
   "eslintConfig": {
     "extends": [
