--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3000",
-    "pm2": "pm2"
+    "start": "next start -p 3000"
   },
   "eslintConfig": {
     "extends": [
