--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srating.io-gui",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "private": true,
   "type": "module",
   "dependencies": {
@@ -59,6 +59,7 @@
   "devDependencies": {
     "@eslint/js": "^9.6.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/lodash": "^4.17.10",
     "eslint": "^8.57.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.16.0"
