--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "srating.io-gui",
-  "version": "5.1.0",
+  "version": "5.2.0",
   "private": true,
   "type": "module",
   "dependencies": {
@@ -63,6 +63,7 @@
     "@eslint/js": "^9.17.0",
     "@types/jest": "^30.0.0",
     "@types/lodash": "^4.17.10",
+    "@types/react-dom": "^19.1.9",
     "cross-env": "^10.0.0",
     "eslint": "^9.22.0",
     "eslint-plugin-react": "^7.37.3",
