Feature: player trends, all seasons

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,24 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@/components/*": ["components/*"],
-      "@/redux/*": ["redux/*"],
-      "@/lib/*": ["lib/*"],
-      "@/contexts/*": ["contexts/*"],
-      "@/app/*": ["app/*"],
-      "@/types/*": ["types/*"],
+      "@/components/*": [
+        "components/*"
+      ],
+      "@/redux/*": [
+        "redux/*"
+      ],
+      "@/lib/*": [
+        "lib/*"
+      ],
+      "@/contexts/*": [
+        "contexts/*"
+      ],
+      "@/app/*": [
+        "app/*"
+      ],
+      "@/types/*": [
+        "types/*"
+      ]
     },
     "allowJs": true,
     "skipLibCheck": true,
@@ -21,10 +33,10 @@
     "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "plugins": [
       {
         "name": "next"
@@ -37,7 +49,10 @@
     "next-env.d.ts",
     ".next/types/**/*.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    ".next\\dev/types/**/*.ts",
+    ".next\\dev/types/**/*.ts",
+    ".next/dev/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
